Set pointer type for the emulated touch events

Set pointerType of emulated touch points that are generated from
mouse events in dev tools.

BUG=590841

Review URL: https://codereview.chromium.org/1748103002

Cr-Commit-Position: refs/heads/master@{#378560}

Former-commit-id: 8822f1884b81370ff2f0a44b33a22e9869514d7f